--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <main>
 
-        <div class="custom-slider swiper-slider">
+        <div class="custom-slider swiper-slider" data-arrow-hover data-pagination-hover>
             <div class="swiper">
                 <div class="swiper-wrapper" data-arrow-hover data-default="1" data-md="1" data-lg="1" data-xl="1" data-space="10" data-loop="true">
                     <div class="swiper-slide">
